# machine-learning-2025

./: README.md  homework_01.ipynb  pyproject.toml
02-regression/: homework-02.ipynb
03-classification/: homework-03.ipynb
04-evaluation/: homework-04.ipynb
05-deployment/: Dockerfile  homework-05.ipynb  predict.py
06-trees/: homework-06.ipynb
